--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^1.7.7",
     "copy-webpack-plugin": "^12.0.2",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
